--- a/src/app/features/cart/_components/wishlist/wishlist.component.html
+++ b/src/app/features/cart/_components/wishlist/wishlist.component.html
@@ -35,14 +35,14 @@
 
         <!-- ✅ Product Image -->
         <div class="wishlist-image">
-          <img [src]="product.image" alt="{{ product.name }}" />
+          <img [src]="product.productDetails.images[0].image" alt="{{ product.productDetails.name }}" />
         </div>
 
         <!-- ✅ Product Details -->
         <div class="wishlist-details">
-          <h3>{{ product.name }}</h3>
+          <h3>{{ product.productDetails.name }}</h3>
           <!-- <p class="brand">{{ product.brand }}</p> -->
-          <p class="price">${{ product.price }}</p>
+          <p class="price">${{ product.productDetails.price }}</p>
           <!-- <p class="sales">{{ product.sales }} Sales</p> -->
         </div>
 
