--- a/src/app/features/product/_components/product/product.component.scss
+++ b/src/app/features/product/_components/product/product.component.scss
@@ -153,3 +153,38 @@
 .right-scroll {
   right: 10px;
 }
+
+/* Skeleton Loader Animation */
+@keyframes skeleton-loading {
+  0% { background-color: #e0e0e0; }
+  100% { background-color: #f5f5f5; }
+}
+
+/* Skeleton Box */
+.skeleton-box {
+  display: inline-block;
+  background: #e0e0e0;
+  border-radius: 4px;
+  animation: skeleton-loading 1.5s infinite alternate;
+}
+
+/* Skeleton Card */
+.skeleton {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  padding: 10px;
+  border-radius: 8px;
+  background: #fff;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  // min-height: 250px;
+}
+
+/* Add-to-Cart Button Skeleton */
+.add-to-cart-skeleton {
+  width: 100%;
+  height: 40px;
+  background: #e0e0e0;
+  border-radius: 5px;
+  animation: skeleton-loading 1.5s infinite alternate;
+}
