added user-settings navigation & its pages

--- a/src/app/features/product/_components/product/product.component.html
+++ b/src/app/features/product/_components/product/product.component.html
@@ -58,7 +58,7 @@
           <span>⭐⭐⭐⭐⭐</span>
           <span class="rating-count">({{ product.rating }})</span>
         </div>
-        <button class="add-to-cart" (click)="addToCart()">Add to Cart</button>
+        <button class="add-to-cart" (click)="addToCart(product.id)">Add to Cart</button>
       </div>
     </div>
     }
