added necessary checks

--- a/src/app/features/cart/_components/wishlist/wishlist.component.html
+++ b/src/app/features/cart/_components/wishlist/wishlist.component.html
@@ -35,7 +35,7 @@
 
         <!-- ✅ Product Image -->
         <div class="wishlist-image">
-          <img [src]="getImagePath(product.productDetails.images[0].image)" alt="{{ product.productDetails.name }}" />
+          <img [src]="getImagePath(product.productDetails.images![0].image)" alt="{{ product.productDetails.name }}" />
         </div>
 
         <!-- ✅ Product Details -->
