--- a/src/app/features/product/_components/view-product/view-product.component.html
+++ b/src/app/features/product/_components/view-product/view-product.component.html
@@ -1,7 +1,7 @@
 <div class="product-container" *ngIf="!isLoading(); else loading">
   <!-- ✅ Product Image -->
   <div class="product-image">
-    <img [src]="getImagePath(product()?.images![0]?.image)" [alt]="product()?.name" (error)="onImageError($event)" />
+    <img [src]="getImagePath(product()?.images![0].image)" [alt]="product()?.name" (error)="onImageError($event)" />
 
     <!-- ✅ Product Thumbnail Images -->
     <div class="thumbnail-container" *ngIf="product()?.images!.length > 1">
